test/compiler_errors/deprecated-warnings.lzx
<canvas>
  <view x="1+2">
    <attribute name="y" init="10"/>
    <attribute name="z" constraint="10"/>
  </view>
  <class name="foo">
    <attribute name="y" init="10"/>
    <attribute name="z" constraint="10"/>
  </class>
</canvas>
<!-- * X_LZ_COPYRIGHT_BEGIN ***************************************************
* Copyright 2001-2004 Laszlo Systems, Inc.  All Rights Reserved.              *
* Use is subject to license terms.                                            *
* X_LZ_COPYRIGHT_END ****************************************************** -->
